package presentation;

public class InvoiceListItem {
    public String id;
    public String date;
    public String customer;
    public String room_id;
    public String type;
    public String unitPrice;
    public int hour;
    public int day;
    public double totalPrice;
}
